# PyGoogler

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  config.json  pyproject.toml
.github/workflows/: main.yml  test.yml
pygoogler/: __init__.py  __main__.py  exceptions.py  main.py
pygoogler/cli/: __init__.py  items_list.py  print.py
pygoogler/configuration/: __init__.py  configuration.py  model.py
pygoogler/models/: __init__.py  search_response.py
pygoogler/search_api/: __init__.py  google.py  search_api.py
pygoogler/service/: __init__.py  configuration.py  factory.py  search.py  service.py
scripts/: test.sh
tests/: conftest.py
tests/e2e/: test_main.py
tests/integration/service/: test_configuration.py  test_search.py
tests/unit/configuration/: __init__.py  test_configuration.py
tests/unit/search_api/: __init__.py  test_google.py
tests/unit/service/: test_configuration.py
