[tool.poetry]
name = "pygoogler"
version = "0.1.0"
description = ""
authors = ["Ali kemal Yıldırım <akemalyildirim1@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
pygoogler = "pygoogler.main:app"

[tool.poetry.dependencies]
python = "^3.11"
prompt-toolkit = "^3.0.46"
requests = "^2.32.3"
typer = { extras = ["all"], version = "^0.12.3" }
pydantic = "^2.7.3"
pydantic-settings = "^2.3.1"
coverage = { extras = ["toml"], version = "^7.5.3" }


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.2"
usort = "^1.0.8.post1"
mypy = "^1.10.0"
types-requests = "^2.32.0.20240602"
pytest-mock = "^3.14.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
strict_optional = false

[tool.coverage.run]
branch = true
source = ["pygoogler"]
omit = ["pygoogler/cli/*", ]

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 100
